Updated plotting * Solution sets will now be plotted with projected histograms on the E and n axes.
Updated masterScript
* It is now possible to run the whole
optimization routine using one params.yaml
file.

--- a/params.yaml
+++ b/params.yaml
@@ -8,20 +8,38 @@ general:
  do_plots: True
  
 parsing:
- raw_data_path: "/home/miha/Work/datasets/JA_2020-06-29/"
- parsed_data_path: "/home/miha/Work/research/ppp-4_config_comparison/data/config_comparison_2/JA_2020-06-29/"
+ raw_data_path: "/home/miha/Work/datasets/JA_2021-02-24_pulse_width/2021 02 24 vary pulse duration/2021 02 24 N+ pulse responses/"
+ parsed_data_path: "/home/miha/Work/codes/Consecutive_Transients_Analyzer/test/data/parsed_data/"
  species: "K"
- available_charge_states: [1,2,3,4,5,6,7,8,9,10,11,12]
+ available_charge_states: [3,4,5,6,7,8,9,10,11,12]
  header: 0 # If no header, set 0. If data has a header, set its length (e.g. 1)
- footer: 0 # If no footer, set 0. If data has a footer, set its length (e.g. 12)
- separator: "," # Separator for the raw data
- one_plus_naming_convention: "1+_K{}+.csv"
- n_plus_naming_convention: "K{}+.csv"
- names: [1,2,3,4,5,6,7,8,9,10,11,12]
+ footer: 12 # If no footer, set 0. If data has a footer, set its length (e.g. 12)
+ separator: "\t" # Separator for the raw data
+ one_plus_naming_convention: "2021 02 24 - {} pulse 1+.txt"
+ n_plus_naming_convention: "2021 02 24 - {} courant N+.txt"
+ names: [
+"16 58 00",
+"16 35 19",
+"16 24 53",
+"16 04 31",
+"15 54 34",
+"15 35 39",
+"14 31 55",
+"14 52 36",
+"15 02 26",
+"15 23 34"
+ ]
 
 data:
- parsed_data_path: "/home/miha/Work/codes/Consecutive_Transients_Analyzer/test/data/parsed_data/" # Path to the directory containing the data files
- available_charge_states: [3,4,5,6,7,8,9,10,11,12] # Charge states for which transient data is available
+ # Set parsed_data_path to False
+ # if it is the same as 
+ # the one used in parsing.
+ parsed_data_path: False # Path to the directory containing the data files
+ 
+ # Set available_charge_states as False
+ # if it is the same as the one 
+ # used in parsing
+ available_charge_states: False # Charge states for which transient data is available
  species: "K"
  abc_file_name: "abc_h1e-3.csv" # Name of the abc file (to save / to load)
  
@@ -35,17 +53,13 @@ optimizer:
  number_of_ne: 100
  number_of_MC: 10
 
-
 plotting:
-    # Set False, if file is specified by
-    # general["save_to_path"] + data["abc_file_name"]
-    # Otherwise, give path to file.
-    # abc_file_path: "/home/miha/Work/research/ppp-4_config_comparison/analysis/config_comparison_2/data_2021-02-24/5ms/solution_abc_JA_2021-02-24_pw5ms_h10e-6.csv"     
     # Set False, if files are specified by
     # general["save_to_path"]
     # and the number of ne, and number of MC.
     # Otherwise, give list of files.  
     solution_set_files: False
+    
     # Set False, if same as data["available_charge_states"]
     # Otherwise, give list of charge states for which 
     # solution sets are available.
