--- a/params.yaml
+++ b/params.yaml
@@ -1,5 +1,5 @@
 data:
-  abc_file_name: abc.csv
+  abc_file_name: ''
   available_charge_states: &id001
   - 3
   - 4
@@ -11,24 +11,24 @@ data:
   - 10
   - 11
   - 12
-  parsed_data_path: /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/
+  parsed_data_path: /home/miha/Work/research/ppp-4_config_comparison/analysis/config_comparison_4/JA_2021-02-24_5ms/results/
   species: K
 general:
-  do_abc: 1
-  do_neTe: 1
+  do_abc: 0
+  do_neTe: 0
   do_parse: 1
-  do_plots: 1
+  do_plots: 0
   elemental_data_directory: ./elemental_data/
-  save_to_path: /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/
+  save_to_path: /home/miha/Work/research/ppp-4_config_comparison/analysis/config_comparison_4/JA_2021-02-24_5ms/results/
   working_directory: ./
 optimizer:
-  Ee_hi: 9999.0
-  Ee_lo: 10.0
-  ne_hi: 2.608e+18
-  ne_lo: 100000000000.0
-  number_of_MC: 10
+  Ee_hi: 0
+  Ee_lo: 0
+  ne_hi: 0
+  ne_lo: 0
+  number_of_MC: 1000
   number_of_ne: 1000
-  rate_coefficient_method: interpMB
+  rate_coefficient_method: ''
   rk_time_step: 0.001
 parsing:
   available_charge_states: *id001
@@ -57,24 +57,19 @@ parsing:
   - 2021 02 24 - 14 52 36 pulse 1+.txt
   - 2021 02 24 - 15 02 26 pulse 1+.txt
   - 2021 02 24 - 15 23 34 pulse 1+.txt
-  parsed_data_path: /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/
-  raw_data_path: /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/data/extracted_transients/
+  parsed_data_path: /home/miha/Work/research/ppp-4_config_comparison/analysis/config_comparison_4/JA_2021-02-24_5ms/results/
+  raw_data_path: /home/miha/Work/datasets/JA_2021-02-24_pulse_width/2021 02 24 vary
+    pulse duration/2021 02 24 N+ pulse responses/
   separator: \t
   species: K
 plotting:
-  Ee_hi: 9999.0
-  Ee_lo: 10.0
-  F_hi: 1.0e-06
-  available_charge_states:
-  - 5
-  - 6
-  - 7
-  - 8
-  - 9
-  - 10
-  confidence: 0.341
-  ne_hi: 2.608e+18
-  ne_lo: 100000000000.0
+  Ee_hi: 0
+  Ee_lo: 0
+  F_hi: 0
+  available_charge_states: []
+  confidence: 1.0
+  ne_hi: 0
+  ne_lo: 0
   plot_characteristic_time_vs_charge:
     conf_color: r
     conf_marker: o
@@ -82,20 +77,20 @@ plotting:
     cx_color: b
     cx_marker: ^
     cx_yscale: linear
-    do_plot: 1
+    do_plot: false
     inz_color: k
     inz_marker: s
     inz_yscale: linear
     output_data: true
   plot_energy_content_vs_charge:
     color: k
-    do_plot: 1
+    do_plot: false
     marker: s
     output_data: true
     y_hi: false
     y_lo: false
   plot_number_of_solutions_vs_F:
-    do_plot: 1
+    do_plot: false
     list_of_F_values:
     - 0.001
     - 0.0001
@@ -107,21 +102,15 @@ plotting:
     y_hi: false
     y_lo: 1
   plot_solution_sets:
-    do_plot: 1
+    do_plot: false
     sigma: 10
     x_scale: log
     y_scale: log
   plot_triple_product_vs_charge:
     color: m
-    do_plot: 1
+    do_plot: false
     marker: s
     output_data: true
     y_hi: false
     y_lo: false
-  solution_set_files:
-  - /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/solset_MC_iters-10_N-1000_q-5.csv
-  - /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/solset_MC_iters-10_N-1000_q-6.csv
-  - /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/solset_MC_iters-10_N-1000_q-7.csv
-  - /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/solset_MC_iters-10_N-1000_q-8.csv
-  - /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/solset_MC_iters-10_N-1000_q-9.csv
-  - /home/miha/Work/codes/Consecutive_Transients_Analyzer/test/results/solset_MC_iters-10_N-1000_q-10.csv
+  solution_set_files: []
